--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,7 @@ font-display:swap;font-style:normal;font-weight:400;
   padding: 0; 
 }
 
+
 body {
 	overflow-x: hidden;
   overflow-y: scroll;
@@ -190,7 +191,7 @@ a:hover { cursor: pointer;}
 button {font-family: 'GreycliffCF-Regular', sans-serif; background: none; outline: none; border: none; }
 button:hover {cursor: pointer; }
 
-#viewport {width: 100vw; height: 100vh; position: fixed; display: block;}
+#viewport {width: 100%; height: 100%; position: fixed; display: block;}
 .page-wrapper {padding: 0px; position: absolute; left: 0; top: 0; width: 100%; height: 4000vh; scroll-behavior: smooth;}
 #container {height: 2000vh; position: fixed;}
 canvas { width: 100vw; height: 100vh; display: block; background-color: #2E345B; }
@@ -210,7 +211,7 @@ canvas { width: 100vw; height: 100vh; display: block; background-color: #2E345B;
 #social_banner {width: 80%; margin: 10px 0px 0px -30%;}
 #social_banners, #shortcut_banners {display: none;}
 
-.shortcut_banners_wrapper { width: 30%; max-width: 250px; min-width: 150px; top: 5%; right: 0; position: fixed;}
+.shortcut_banners_wrapper { width: 30%; max-width: 250px; min-width: 150px; top: 5%; right: 10px; position: fixed;}
 .shortcut_banners_wrapper img {width: 55%; float: right; margin-bottom: -3%}
 .banner:hover {transform: rotate(5deg); cursor: pointer;}
 #shortcut_banner {width: 80%; top: 0; margin: 0px -5% 0px 0px; }
@@ -323,7 +324,7 @@ canvas { width: 100vw; height: 100vh; display: block; background-color: #2E345B;
 #mia2 {width: 300px; height: 275px; top: 50%; right: 40%; background: url('../src/desktop_items/mia.jpg'); background-size: cover;}
 #mia3 {width: 600px; height: 475px; top: 10%; right: 30%; background: url('../src/desktop_items/miame.jpg'); background-size: cover;}
 
-#selfport {width: 400px; height: 300px; position: fixed; right: 5%; top: 50%; background: url('../src/desktop_items/selfport.jpg'); background-size: cover;}
+#selfport {width: 400px; height: 300px; position: fixed; left: 5%; top: 50%; background: url('../src/desktop_items/selfport.jpg'); background-size: cover;}
 
 /* Finder Window CSS ---------------------------------------------------------------------------------------------------- */
 
